--- a/Insults.html
+++ b/Insults.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Random Insult Generator</title>
+    <title>Random Inult Generator</title>
 </head>
 <body>
     <h1>Random Insult Generator</h1>
